@@ -17,6 +17,8 @@ Version 0.1.7 - ???
 - [new] Added WFYAHOO_widget_ColorPicker widget.
 - [bugfix] If a bound value is an array, and a formatter is assigned to the binding, PHOCOA will now apply the formatter function to the elements of the array, rather than the array (which resulted in a bungled value). Useful for things like WFJumpSelect::$contentLabels.
 - [new] Added a setTarget() method to WFSubmit so you can better control the method called when submitting a form.
+- [new] Add minified versions of core JS files and add GZIP encoding to httpd.conf template
+- [bugfix] Add support for setting any KVC property in fixtures. Previously only properties backed by the database would work.
 
 Version 0.1.6 - 8/7/2008
 - [bugfix] Custom action methods on WFSubmit widgets now work in conjunction with WFForm.isAjax. Previously the "default" action name was always used even if a custom action was specified.
